<resources>
    <string name="app_name">Prog7314P2</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="dont_have_an_account_register_here">Dont have an account? Register here</string>
    <string name="login">login</string>
    <string name="welcome_to_unify">Welcome to Unify</string>
    <string name="unify">Unify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_placed">!!Order Placed!!</string>
    <string name="view_orders">View Orders</string>
    <string name="orders_placed">Orders Placed</string>
    <string name="address">Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="surname2">Surname</string>
    <string name="Name2">Name</string>
    <string name="logout">Logout</string>
    <string name="profile_amp_settings"><![CDATA[Profile & Settings]]></string>
    <string name="address2">Address</string>
    <string name="add">Add</string>
</resources>